<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner"
    android:padding="12dp"
    >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:textColor="#E0583A"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/bree_serif"
        android:layout_marginTop="24dp"
        android:text="@string/lose"
        android:textSize="28sp"
        android:layout_centerInParent="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:background="@drawable/btn_border"
        android:fontFamily="@font/bree_serif"
        android:text="@string/finish"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/text"
        android:layout_toEndOf="@+id/finish"
        android:layout_toRightOf="@+id/finish"
        android:fontFamily="@font/bree_serif"
        android:background="#E0583A"
        android:text="@string/playAgain"
        android:textColor="#FFF"
        android:textSize="18sp" />

</RelativeLayout>