<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_top_gradient"
    tools:context=".MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@drawable/bg_blue_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bree_serif"
        android:text="@string/app_title"
        android:textColor="#E5E5E5"
        android:textSize="78sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="270dp"
        android:layout_marginTop="172dp"
        android:contentDescription="@string/app_title"
        android:src="@drawable/mountain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="207dp"
        android:layout_height="110dp"
        android:layout_marginTop="268dp"
        android:contentDescription="@string/app_title"
        android:src="@drawable/robo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_manual"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_one"
        android:fontFamily="@font/bree_serif"
        android:text="@string/manual"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessage"
        app:layout_constraintVertical_bias="0.471" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_autopilot"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_one"
        android:fontFamily="@font/bree_serif"
        android:text="@string/autopilot"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_manual"
        app:layout_constraintVertical_bias="0.124" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_help"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_one"
        android:fontFamily="@font/bree_serif"
        android:text="@string/help"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_autopilot"
        app:layout_constraintVertical_bias="0.176" />

</androidx.constraintlayout.widget.ConstraintLayout>

